0.9/helpWriting/help.md
## 『使您放松的日本语假名复习程序 』ver. 0.9使用指南

## #0  开始

![image-20201129084342565](E:\JapaneseKanasReview\JapaneseKanasReview_QtandCplusplusVer\JapaneseKanasReview\helpWriting\help.assets\image-20201129084342565.png)

打开程序时，您应看到如上界面，点击“START”按钮即可开始，此外，顶部的菜栏也为您提供了许多操作

![image-20201129084456013](E:\JapaneseKanasReview\JapaneseKanasReview_QtandCplusplusVer\JapaneseKanasReview\helpWriting\help.assets\image-20201129084456013.png)

![image-20201129084512354](E:\JapaneseKanasReview\JapaneseKanasReview_QtandCplusplusVer\JapaneseKanasReview\helpWriting\help.assets\image-20201129084512354.png)

![image-20201129084521626](E:\JapaneseKanasReview\JapaneseKanasReview_QtandCplusplusVer\JapaneseKanasReview\helpWriting\help.assets\image-20201129084521626.png)

通过菜单栏，您可以退出程序（这当然和点击右上角那个该死的小红叉是同样的道理）

在“设置"中，您可以进行设置（见关于	音乐播放器	和	背景设置	的说明），事实上，如果您进入程序后想要关掉烦人的背景音乐，您就必须进入设置了，您可以在任意一个有菜单栏的窗口进入

而帮助，它当然是为您忘记本教程的时候准备的，您可以在任意一个有菜单栏的窗口进入

### #0.1 选择窗口

![image-20201129084858003](E:\JapaneseKanasReview\JapaneseKanasReview_QtandCplusplusVer\JapaneseKanasReview\helpWriting\help.assets\image-20201129084858003.png)

不出意外的话（出了意外我也没办法），您应该会看到这样的界面，不需要过多介绍，点击即可进入（见关于	 交互练习模式	 和 	输出问卷模式	的说明）

## #1 设置

### #1.1音乐播放器

![image-20201129085323537](E:\JapaneseKanasReview\JapaneseKanasReview_QtandCplusplusVer\JapaneseKanasReview\helpWriting\help.assets\image-20201129085323537.png)

当您通过任何一个带有菜单栏的窗口进入设置，您看到的应该是如上界面，您同样可以通过菜单栏进入帮助

界面顶端显示歌曲信息，界面中间为播放列表（当然您并不支持通过播放列表切换音乐）列表右侧为音量模块，而它们的下端显示歌曲目前位置（播放时间），界面底端为歌曲播放的控制模块和播放模式的选择器

#### #1.1.1音量控制

![image-20201129085825235](E:\JapaneseKanasReview\JapaneseKanasReview_QtandCplusplusVer\JapaneseKanasReview\helpWriting\help.assets\image-20201129085825235.png)

转动界面中的滚轮即可调整音量，顺时针旋转即为增大音量，逆时针为减小音量，但需要注意的是，当您旋转一周之后，音量将会重新从0开始增长（请您自己摸索）（图示为音量0%时滚轮的状态）

#### #1.1.2音乐控制

![image-20201129090041569](E:\JapaneseKanasReview\JapaneseKanasReview_QtandCplusplusVer\JapaneseKanasReview\helpWriting\help.assets\image-20201129090041569.png)

如上四个控件用于控制音乐的播放和切换，“上一首”和“下一首”可以切换当前播放的音乐（但当播放模式处于“随机播放“时，并不会按照播放列表跳转；当播放模式处于”单曲循环时“，并不会跳转到其他的音乐）中间两个绿色的按钮用于暂停和播放（左->暂停，右->播放）

#### #1.1.3播放模式切换

![image-20201129090447018](E:\JapaneseKanasReview\JapaneseKanasReview_QtandCplusplusVer\JapaneseKanasReview\helpWriting\help.assets\image-20201129090447018.png)

通过点击这个按钮切换播放模式，开始时，播放模式被默认为“顺序播放”，当您点击按钮时，播放模式会切换，但需要注意，第一次点击不会切换，这属于正常现象

#### #1.1.4前往背景设置

![image-20201129090619488](E:\JapaneseKanasReview\JapaneseKanasReview_QtandCplusplusVer\JapaneseKanasReview\helpWriting\help.assets\image-20201129090619488.png)

通过点击这个按钮前进到背景设置（别担心，您可以返回）

### #1.2背景设置

![image-20201129090747722](E:\JapaneseKanasReview\JapaneseKanasReview_QtandCplusplusVer\JapaneseKanasReview\helpWriting\help.assets\image-20201129090747722.png)

当您前进到背景设置时，您会看到如下界面，在本界面中，您可以选择背景，选择为单选，点击“应用设置”即可应用，但需要注意的是，设置会同时应用到交互练习场景，练习汇报场景和问卷生成场景（见关于 	交互练习模式	和	练习汇报	和	问卷生成   的声明），如下：

![image-20201129091040422](E:\JapaneseKanasReview\JapaneseKanasReview_QtandCplusplusVer\JapaneseKanasReview\helpWriting\help.assets\image-20201129091040422.png)

![image-20201129091047604](E:\JapaneseKanasReview\JapaneseKanasReview_QtandCplusplusVer\JapaneseKanasReview\helpWriting\help.assets\image-20201129091047604.png)

<img src="E:\JapaneseKanasReview\JapaneseKanasReview_QtandCplusplusVer\JapaneseKanasReview\helpWriting\help.assets\image-20201129091339308.png" alt="image-20201129091339308" style="zoom: 73%;" />![image-20201129091342480](E:\JapaneseKanasReview\JapaneseKanasReview_QtandCplusplusVer\JapaneseKanasReview\helpWriting\help.assets\image-20201129091342480.png)![image-20201129091344560](E:\JapaneseKanasReview\JapaneseKanasReview_QtandCplusplusVer\JapaneseKanasReview\helpWriting\help.assets\image-20201129091344560.png)

（这三个*老大哥*的背景会一起被改变。）

## #2 交互式练习

哦，看在上帝的份上，交互式练习的操作更加复杂，没错我的老伙计，您需要好好阅读以下内容

### #2.1 练习前设置

![image-20201129124837159](E:\JapaneseKanasReview\JapaneseKanasReview_QtandCplusplusVer\JapaneseKanasReview\helpWriting\help.assets\image-20201129124837159.png)

当您在选择窗口选择“进入交互式练习”后，您将会进入这样的界面，您可以在这里对即将进行的交互式练习进行设置，同时，点击“BACK”即可返回到选择窗口

#### #2.1.1进行设置

![image-20201129130308859](E:\JapaneseKanasReview\JapaneseKanasReview_QtandCplusplusVer\JapaneseKanasReview\helpWriting\help.assets\image-20201129130308859.png)

练习轮数，指选择范围后，练习重复的次数，练习轮数≥1，否则无法继续

![image-20201129130317204](E:\JapaneseKanasReview\JapaneseKanasReview_QtandCplusplusVer\JapaneseKanasReview\helpWriting\help.assets\image-20201129130317204.png)

当“记录练习用时“被选择，练习用时将会被记录，并在练习报告中显示（见关于	练习报告	的说明），此项不影响练习进行，您的练习用时指进入练习到结束练习所用时间，单位为秒

![image-20201129130325227](E:\JapaneseKanasReview\JapaneseKanasReview_QtandCplusplusVer\JapaneseKanasReview\helpWriting\help.assets\image-20201129130325227.png)

练习范围为您将要进行的练习中每轮将会出现的假名（见附1'练习中的假名范围'），练习范围每个为独立，可以随意选择，但不可以一个都不选，否则无法继续

![image-20201129130336786](E:\JapaneseKanasReview\JapaneseKanasReview_QtandCplusplusVer\JapaneseKanasReview\helpWriting\help.assets\image-20201129130336786.png)

这部分为强制提交答案模块，当选择“每轮每组练习一定时间强制提交答案”后，您将不再看到“提交答案”按钮（见关于	练习界面 	的说明），而变成一个计时器，强制提交答案的间隔通过下面的输入框输入，注意，如果您选择了强制提交答案，强制提交答案时间必须大于0，否则无法继续，但如果您没有选择强制提交，则强制提交答案时间不影响进行

#### #2.1.2 确认设置 & 输入违规情况

![image-20201129131102727](E:\JapaneseKanasReview\JapaneseKanasReview_QtandCplusplusVer\JapaneseKanasReview\helpWriting\help.assets\image-20201129131102727.png)

点击”确认设置“后，将会弹出如上窗口（数据当然和我演示的不一定相同），这是您设置的简报，您可以通过此窗口检查您的设置是否有问题，如果您想修改您的设置，请点击“No“，点击“Yes”就会进入交互式练习，注意，练习结束前无法返回。如果您出现了练习轮数≤0，没选择假名范围，强制提交选择后强制提交答案时间≤0的情况，将会出现以下情况：

![image-20201129131316453](E:\JapaneseKanasReview\JapaneseKanasReview_QtandCplusplusVer\JapaneseKanasReview\helpWriting\help.assets\image-20201129131316453.png)

![image-20201129131327082](E:\JapaneseKanasReview\JapaneseKanasReview_QtandCplusplusVer\JapaneseKanasReview\helpWriting\help.assets\image-20201129131327082.png)

![image-20201129131341810](E:\JapaneseKanasReview\JapaneseKanasReview_QtandCplusplusVer\JapaneseKanasReview\helpWriting\help.assets\image-20201129131341810.png)

### #2.2练习界面

进行您的交互式练习的界面。

#### #2.2.1 手动提交答案

![image-20201129131457166](E:\JapaneseKanasReview\JapaneseKanasReview_QtandCplusplusVer\JapaneseKanasReview\helpWriting\help.assets\image-20201129131457166.png)

当您没有选择强制提交答案，进入练习时，会看到如下界面。别担心里面的空值或者nan%，这会在你第一次提交答案后变回正常，工具栏的操作同开始界面（见关于 开始 的说明）

##### #2.2.1.1界面介绍

![image-20201129131830891](E:\JapaneseKanasReview\JapaneseKanasReview_QtandCplusplusVer\JapaneseKanasReview\helpWriting\help.assets\image-20201129131830891.png)

此处显示本组的假名，您需要按照现实的假名在它下面的输入框中输入回答。注意别搞反了。

Ps:您可以通过键盘上的tab切换输入框，但这功能似乎不太稳定（并不会导致程序崩溃），所以请自己摸索找到使用的平衡点。

例：

![image-20201129131732188](E:\JapaneseKanasReview\JapaneseKanasReview_QtandCplusplusVer\JapaneseKanasReview\helpWriting\help.assets\image-20201129131732188.png)

错误例：（没有按照对应的输入框输入）

![image-20201129131753934](E:\JapaneseKanasReview\JapaneseKanasReview_QtandCplusplusVer\JapaneseKanasReview\helpWriting\help.assets\image-20201129131753934.png)

##### #2.2.1.2提交操作

![image-20201129131915654](E:\JapaneseKanasReview\JapaneseKanasReview_QtandCplusplusVer\JapaneseKanasReview\helpWriting\help.assets\image-20201129131915654.png)

点击"提交答案"按钮后，您的答案就提交了，提交答案之后，将会发生一系列反应，比如

![image-20201129132051496](E:\JapaneseKanasReview\JapaneseKanasReview_QtandCplusplusVer\JapaneseKanasReview\helpWriting\help.assets\image-20201129132051496.png)

如图所示，此为我进行了两轮练习之后的界面，在第一轮，我没有对于「る」的作答，所以会显示る: -> ru，这表示：我的作答是" "(也就是没回答)，正确答案是ru。在第二轮，我对于「わ」的作答是aweee，这时会显示わ:aweee -> wa，这表示：我的作答是”aweee"，而正确答案是“wa"。

![image-20201129132337990](E:\JapaneseKanasReview\JapaneseKanasReview_QtandCplusplusVer\JapaneseKanasReview\helpWriting\help.assets\image-20201129132337990.png)

这个区域显示着练习的信息，每次提交答案后会更新。

#### #2.2.2 强制提交答案

![image-20201129133102623](E:\JapaneseKanasReview\JapaneseKanasReview_QtandCplusplusVer\JapaneseKanasReview\helpWriting\help.assets\image-20201129133102623.png)

界面上来说，它与手动提交的差距只有一点：“提交答案”按钮变为了一个显示剩余时间的框(以秒为单位)，其余操作完全相同。（见关于 手动提交答案 的说明）在计时归零（事实上计时器没那么精准，但是你凑合用）时，您的答案会被提交，因此，请合理设置强制提交答案间隔。

#### #2.2.3 时间记录相关

当您选择了“记录练习用时”之后，练习时您的界面底端的状态栏上会出现如下显示：

![image-20201129133307059](E:\JapaneseKanasReview\JapaneseKanasReview_QtandCplusplusVer\JapaneseKanasReview\helpWriting\help.assets\image-20201129133307059.png)

这表示您的练习时间会被记录，同时它实时显示您的已用时间



### #2.3练习报告

当您的练习结束，练习报告就会显示，工具栏的操作同开始界面（见关于 开始 的说明）

![image-20201129133711758](E:\JapaneseKanasReview\JapaneseKanasReview_QtandCplusplusVer\JapaneseKanasReview\helpWriting\help.assets\image-20201129133711758.png)

点击"BACK"可以返回到选择界面。

#### #2.3.1数据解析

界面左侧为您这次练习的数据，需要注意的是，如果您没选择“记录练习用时“，本次练习用时会显示为”未记录“：

![image-20201129133946748](E:\JapaneseKanasReview\JapaneseKanasReview_QtandCplusplusVer\JapaneseKanasReview\helpWriting\help.assets\image-20201129133946748.png)

右侧的控件为你提供会议错题的功能，练习结束后，全部错题会显示在右侧，您可以通过反复切换窗口来记忆它们

![image-20201129133909836](E:\JapaneseKanasReview\JapaneseKanasReview_QtandCplusplusVer\JapaneseKanasReview\helpWriting\help.assets\image-20201129133909836.png)

![image-20201129133920900](E:\JapaneseKanasReview\JapaneseKanasReview_QtandCplusplusVer\JapaneseKanasReview\helpWriting\help.assets\image-20201129133920900.png)



## #3 问卷生成

通过此界面，您可以生成一些问卷。（您可以将它保存到.txt或.doc中，打印出来让您的同学们也享受日本语的放松）

![image-20201129134125739](E:\JapaneseKanasReview\JapaneseKanasReview_QtandCplusplusVer\JapaneseKanasReview\helpWriting\help.assets\image-20201129134125739.png)

当选择”输出问卷模式”之后，您就会进入如上界面，点击“BACK”可以返回到选择窗口，工具栏的操作同开始界面（见关于 开始 的说明）

#### #3.1界面介绍

![image-20201129135036882](E:\JapaneseKanasReview\JapaneseKanasReview_QtandCplusplusVer\JapaneseKanasReview\helpWriting\help.assets\image-20201129135036882.png)

此模块支持选择写入的文件，点击“选择文件”可以选择文件，注意，如果不选择文件，您将无法使用“保存到文件”功能

![image-20201129135125826](E:\JapaneseKanasReview\JapaneseKanasReview_QtandCplusplusVer\JapaneseKanasReview\helpWriting\help.assets\image-20201129135125826.png)

在此部分选择生成的范围（见附1  练习中的假名范围），如果您不选择，什么也不会输出

![image-20201129135201162](E:\JapaneseKanasReview\JapaneseKanasReview_QtandCplusplusVer\JapaneseKanasReview\helpWriting\help.assets\image-20201129135201162.png)

在此部分选择生成的样式（见附2 问卷生成的样式），当然，您也可以选择“预览样式”来在输出区预览样式

![image-20201129135255279](E:\JapaneseKanasReview\JapaneseKanasReview_QtandCplusplusVer\JapaneseKanasReview\helpWriting\help.assets\image-20201129135255279.png)

在此可以设置问卷中每行的假名数，注意，1<假名数<10.

#### #3.2生成问卷

![image-20201129135610852](E:\JapaneseKanasReview\JapaneseKanasReview_QtandCplusplusVer\JapaneseKanasReview\helpWriting\help.assets\image-20201129135610852.png)

点击“生成”按钮，问卷会生成在输出区，点击“保存到文件”，问卷会保存到选择的文件中

Ps.因为现在写入文件好像频繁发生乱码问题，我建议您手动复制到文件中

Ps.因为问卷中的对齐问题似乎没太处理好，我请求您自己精修



## # :O  使用注意

虽然一时间想不到太明显的问题，但我还是给出一些必要的建议：

1. 不论什么情况，我不建议您快速频繁点击任何一个按钮或暴力操作任何一个控件
2. 除非程序卡死等必要情况，我不建议您通过任务管理器终结程序
3. 如果程序卡死，而重新进入无法运行或根本没运行，我建议您通过任务管理器检查程序是否在后台运行，如果在，终结他，如果还不行，我建议您重启计算机
4. 安装后请不要擅自操作程序目录下的文件，包括但不限于删除某个文件，删除某个文件夹，随意把里面的文件移动到别的地方等
5. 如果程序报错“缺少xxx.dll无法运行”，我建议你安装windows常用运行库集合（自行百度）
6. 出现问题，百度解决10%问题，重开解决30%问题，重启+重开解决50%问题，删干净重装解决65%问题，但就算你重装系统，换个电脑，也未必能解决全部问题（划掉）
7. 我希望我的程序不会让您的电脑卡死，但如果这样，请不要问候我的家人（划掉）
8. 我希望您能给我的GitHub项目点个小星星：https://github.com/ConstantinusY/Japanese_KANAS_Review/tree/main
9. 前八条全部有效
10. 第九条永久无效
11. 废除第十条
12. 记住前五条，它们起码是靠谱的



## # :(    运行中可能出现的问题

当您生成问卷时，可能会不对齐，当您把问卷写入文件时，可能会出现乱码。

（本版块永久为可添加状态）



## # : | 其他内容

### #附1  练习中的假名范围

此处声明的假名范围为您在进行交互式练习和生成问卷时使用的假名。注意，程序中提到的“浊音”包括「ぱ」「パ」等半浊音。「フェ」等用于外来语标音的特殊拗音并不在任何一个范围内，也没有内置到程序中。

##### 平假名清音部分：

あ,い,う,え,お,
か,き,く,け,こ,
さ,し,す,せ,そ,
た,ち,つ,て,と,
な,に,ぬ,ね,の,
は,ひ,ふ,へ,ほ,
ま,み,む,め,も,
や,ゆ,よ,
ら,り,る,れ,ろ,
わ,を,
ん,

##### 平假名浊音部分：

が,ぎ,ぐ,げ,ご,
ざ,じ,ず,ぜ,ぞ,
だ,ぢ,づ,で,ど,
ば,び,ぶ,べ,ぼ,
ぱ,ぴ,ぷ,ぺ,ぽ,

##### 平假名拗音部分：

きゃ,きゅ,きょ,
しゃ,しゅ,しょ,
ちゃ,ちゅ,ちょ,
にゃ,にゅ,にょ,
ひゃ,ひゅ,ひょ,
みゃ,みゅ,みょ,
りゃ,りゅ,りょ,
ぎゃ,ぎゅ,ぎょ,
じゃ,じゅ,じょ,
びゃ,びゅ,びょ,
ぴゃ,ぴゅ,ぴょ

##### 片假名清音部分：

ア,イ,ウ,エ,オ,
カ,キ,ク,ケ,コ,
サ,シ,ス,セ,ソ,
タ,チ,ツ,テ,ト,
ナ,ニ,ヌ,ネ,ノ,
ハ,ヒ,フ,ヘ,ホ,
マ,ミ,ム,メ,モ,
ヤ,ユ,ヨ,
ラ,リ,ル,レ,ロ,
ワ,ヲ,
ン

##### 片假名浊音部分：


ガ,ギ,グ,ゲ,ゴ,
ザ,ジ,ズ,ゼ,ゾ,
だ,ヂ,ヅ,デ,ド,
バ,ビ,ブ,ベ,ボ,
パ,ピ,プ,ペ,ポ,

##### 片假名拗音部分：

キヤ,キュ,キョ,
シャ,シュ,ショ,
チャ,チュ,チョ,
ニャ,ニュ,ニョ,
ヒャ,ヒュ,ヒョ,
ミャ,ミュ,ミョ,
リャ,リュ,リョ,
ギャ,ギュ,ギョ,
ジャ,ジュ,ジョ,
ビャ,ビュ,ビョ

### #附2 问卷生成的样式

样式1：

![image-20201129134941582](E:\JapaneseKanasReview\JapaneseKanasReview_QtandCplusplusVer\JapaneseKanasReview\helpWriting\help.assets\image-20201129134941582.png)

样式2：

![image-20201129134859596](E:\JapaneseKanasReview\JapaneseKanasReview_QtandCplusplusVer\JapaneseKanasReview\helpWriting\help.assets\image-20201129134859596.png)

样式3：

![image-20201129135012574](E:\JapaneseKanasReview\JapaneseKanasReview_QtandCplusplusVer\JapaneseKanasReview\helpWriting\help.assets\image-20201129135012574.png)